# image_to_charMap

./: .gitignore  CMakeLists.txt  charImg  charImg.cpp
